<resources>
    <string name="app_name">NewsBrowser</string>
    <string name="breaking_news">Breaking news</string>
    <string name="lorem_ipsum_long">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="articles_browser">Articles browser</string>
    <string name="settings_text">Settings</string>
    <string name="search">Search</string>
    <string name="arabic">Arabic</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="hebrew">Hebrew</string>
    <string name="italian">Italian</string>
    <string name="dutch">Dutch</string>
    <string name="norwegian">Norwegian</string>
    <string name="portuguese">Portuguese</string>
    <string name="polish">Polish</string>
    <string name="russian">Russian</string>
    <string name="save">save</string>
    <string name="language_save_explanation">Choose language of articles you want to see, when using search function</string>
    <string name="preference_language_key">article_search_language_preference</string>
    <string name="chosen_language_key">chosen_language</string>
    <string name="checked_radio_key">checked_radio</string>
    <string name="relevancy">Relevancy</string>
    <string name="popularity">Popularity</string>
    <string name="publication_date">Publication date</string>
</resources>