<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/breaking_news_fragment">
    <fragment
        android:id="@+id/breaking_news_fragment"
        android:name="com.example.newsbrowser.ui.breaking.BreakingNewsFragment"
        android:label="@string/breaking_news"/>

    <fragment
        android:id="@+id/articles_browser_fragment"
        android:name="com.example.newsbrowser.ui.articles.ArticlesBrowserFragment"
        android:label="@string/articles_browser"/>

    <fragment android:id="@+id/settings_fragment"
        android:name="com.example.newsbrowser.ui.settings.SettingsFragment"
        android:label="@string/settings_text"/>

</navigation>